Added all correct router links to the main snowboard team view

--- a/src/app/snowboards/snowboards-team/snowboards-team.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team.component.html
@@ -14,7 +14,7 @@
 							<h5 class="team-name">Andrew Buergin</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Crested Butte, CO</p>
-							<a href="../team/andrew-buergin.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/andrew-buergin']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -24,7 +24,7 @@
 							<h5 class="team-name">Austin Gibney</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Crested Butte, CO</p>
-							<a href="../team/austin-gibney.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/austin-gibney']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -34,7 +34,7 @@
 							<h5 class="team-name">Bill Rodriguez</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Beaver Creek, CO</p>
-							<a href="../team/bill-rodriguez.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/bill-rodriguez']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -44,7 +44,7 @@
 							<h5 class="team-name">Brady Farr</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Alyeska, AK</p>
-							<a href="../team/brady-farr.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/brady-farr']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -54,7 +54,7 @@
 							<h5 class="team-name">Brock Butterfield</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Beaver Mountain, UT</p>
-							<a href="../team/brock-butterfield.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/brock-butterfield']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -64,7 +64,7 @@
 							<h5 class="team-name">Byron Bagwell</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - West Coast Tromper</p>
-							<a href="../team/byron-bagwell.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/byron-bagwell']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -74,7 +74,7 @@
 							<h5 class="team-name">Casey Lucas</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - South Lake Tahoe, CA</p>
-							<a href="../team/casey-lucas.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/casey-lucas']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -84,7 +84,7 @@
 							<h5 class="team-name">Catherine Eagles</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Shames Mountain, Terrace BC Canada</p>
-							<a href="../team/catherine-eagles.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/catherine-eagles']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -94,7 +94,7 @@
 							<h5 class="team-name">Charlie Hoch</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Wolf Creek, CO</p>
-							<a href="../team/charlie-hoch.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/charlie-hoch']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -104,7 +104,7 @@
 							<h5 class="team-name">Chase Blackwell</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Breckenridge, CO</p>
-							<a href="../team/chase-blackwell.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/chase-blackwell']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -114,7 +114,7 @@
 							<h5 class="team-name">Chris Corning</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Aspen Snowmass, CO</p>
-							<a href="../team/chris-corning.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/chris-corning']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -124,7 +124,7 @@
 							<h5 class="team-name">Chris Galvin</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Squaw Valley</p>
-							<a href="../team/chris-galvin.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/chris-galvin']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -134,7 +134,7 @@
 							<h5 class="team-name">Chris Lynch</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Loveland Ski Area, CO (not resort)</p>
-							<a href="../team/chris-lynch.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/chris-lynch']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -144,7 +144,7 @@
 							<h5 class="team-name">Cooper Sclar</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Winter Park, CO</p>
-							<a href="../team/cooper-sclar.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/cooper-sclar']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -154,7 +154,7 @@
 							<h5 class="team-name">Devin Whiteley</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - The Canyons, UT</p>
-							<a href="../team/devin-whiteley.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/devin-whiteley']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -164,7 +164,7 @@
 							<h5 class="team-name">Everette Simmons</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Colorado</p>
-							<a href="../team/everette-simmons.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/everette-simmons']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -174,7 +174,7 @@
 							<h5 class="team-name">Ian Smith</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Breckenridge, CO</p>
-							<a href="../team/ian-smith.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/ian-smith']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -184,7 +184,7 @@
 							<h5 class="team-name">Jacob 'Cub' Carey</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Keystone, CO</p>
-							<a href="../team/jacob-cub-carey.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/jacob-carey']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -194,7 +194,7 @@
 							<h5 class="team-name">Jake Williams</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Breckenridge, CO</p>
-							<a href="../team/jake-williams.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/jake-williams']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -204,7 +204,7 @@
 							<h5 class="team-name">Jason Elms</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Jackson Hole, WY</p>
-							<a href="../team/jason-elms.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/jason-elms']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -214,7 +214,7 @@
 							<h5 class="team-name">Jason Hindman</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Park City, UT via Seven Spring Pennsylvania</p>
-							<a href="../team/jason-hindman.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/jason-hindman']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -224,7 +224,7 @@
 							<h5 class="team-name">Justin Henigin</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Trollhaugen, WI</p>
-							<a href="../team/justin-henigin.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/justin-henigin']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -234,7 +234,7 @@
 							<h5 class="team-name">Kevin Ray Blue</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Wolf Creek, CO</p>
-							<a href="../team/kevin-ray-blue.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/kevin-blue']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -244,7 +244,7 @@
 							<h5 class="team-name">Mary Boddington</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Crested Butte</p>
-							<a href="../team/mary-boddington.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/mary-boddington']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -254,7 +254,7 @@
 							<h5 class="team-name">Mike Hood</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Beaver Creek, CO</p>
-							<a href="../team/mike-hood.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/mike-hood']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -264,7 +264,7 @@
 							<h5 class="team-name">Mikey Marohn</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Jackson Hole, WY</p>
-							<a href="../team/mikey-marohn.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/mikey-marohn']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -274,7 +274,7 @@
 							<h5 class="team-name">Nate Sheehan</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Ski Liberty, PA</p>
-							<a href="../team/nate-sheehan.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/nate-sheehan']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -284,7 +284,7 @@
 							<h5 class="team-name">Nick DeCicco</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Breckenridge, CO</p>
-							<a href="../team/nick-decicco.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/nick-decicco']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -294,7 +294,7 @@
 							<h5 class="team-name">Nick Larson</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Breckenridge, CO</p>
-							<a href="../team/nick-larson.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/nick-larson']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -304,7 +304,7 @@
 							<h5 class="team-name">Rajat Bhyani</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Snow King Mtn, Jackson Hole, WY</p>
-							<a href="../team/rajat-bhayani.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/rajat-bhyani']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -314,7 +314,7 @@
 							<h5 class="team-name">Rick Rodriguez RICKMODE</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Beaver Creek, CO</p>
-							<a href="../team/rick-rodriguez-rickmode.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/rick-rodriguez']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -324,7 +324,7 @@
 							<h5 class="team-name">Sean Fithian</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Stevens Pass, WA and Cooke City, MT</p>
-							<a href="../team/sean-fithian.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/sean-fithian']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -334,7 +334,7 @@
 							<h5 class="team-name">Taylor Pfaff</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Whistler Blackcomb, BC</p>
-							<a href="../team/taylor-pfaff.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/taylor-pfaff']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -344,7 +344,7 @@
 							<h5 class="team-name">Tom Flocco</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - Park City and Canyons, UT</p>
-							<a href="../team/tom-flocco.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/tom-flocco']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
@@ -354,7 +354,7 @@
 							<h5 class="team-name">Tony Pavlantos</h5>
 							<p class="monospace title-has-line team-function" style="display:none;"></p>
 							<p class="team-description">Home Mountain - www.earth.google.com</p>
-							<a href="../team/tony-pavlantos.html" class="clapat-button outline-button">Read More</a>
+							<a [routerLink]="['/snowboards/team/tony-pavlantos']" class="clapat-button outline-button">Read More</a>
 						</div>
 					</div>
 				</li>
