Completed andrew buergins view, and added css style import to all other snowboard member views

--- a/src/app/snowboards/snowboards-team/snowboards-team-andrew-buergin/snowboards-team-andrew-buergin.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-andrew-buergin/snowboards-team-andrew-buergin.component.html
@@ -1,3 +1,21 @@
-<p>
-  snowboards-team-andrew-buergin works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Andrew_Buergin.jpg" border="0" alt="" />
+      </div>
+
+      <div class="two_third last">
+        <h1>Andrew Buergin</h1>
+        <p><span style="font-family: Helvetica;"><a href="https://youtu.be/6IRgb4s2LBk">CLICK HERE TO SEE ANDREW RIDE</a></span>
+        </p>
+        <p><strong style="font-family: Helvetica;">MEET ANDREW...&nbsp;</strong><span>I've been snowboarding for 20 years. I grew up in New Boston NH. currently living in Crested butte CO. When i can't ride, I like to play drums, skateboard,     golf, and camp in the mountains.&nbsp;</span>
+        </p>
+        <p><strong style="font-family: Helvetica;">ANDREW'S FAVORITE BOARD IS...&nbsp;</strong><span>The&nbsp;Ripsaw 159. this thing is the shit!! super snappy/poppy yet presses easy on rails. it will hold an edge on the steepest most chundery face you can find,     and you can euro carve it like your rocking a double positive stance.</span>
+        </p>
+      </div>
+
+      <hr>
+
+  </div>
+</div>
