Completed every single snowboard team member view

--- a/src/app/snowboards/snowboards-team/snowboards-team-bill-rodriguez/snowboards-team-bill-rodriguez.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-bill-rodriguez/snowboards-team-bill-rodriguez.component.html
@@ -1,3 +1,19 @@
-<p>
-  snowboards-team-bill-rodriguez works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Bill_Rodriguez.jpg" border="0" alt="" />
+      </div>
+
+      <div class="two_third last">
+						<h1>Bill Rodriguez</h1>
+						<p><span style="font-family: Helvetica;"><a href="https://youtu.be/V5fU_PxUEd0">CLICK HERE TO SEE BILL RIDE</a></span>
+						</p>
+						<p><strong style="font-family: Helvetica;">MEET BILL... </strong><span>Snow=Awesome.&nbsp;NS=More Awesome.&nbsp;Billy= Loving the life I have.</span>
+						</p>
+						<p><strong style="font-family: Helvetica;">BILL'S FAVORITE NS BOARD IS...&nbsp;</strong><span>The Funslinger.</span>
+						</p>
+					</div>
+      <hr>
+  </div>
+</div>
