--- a/src/app/snowboards/snowboards-team/snowboards-team-brock-butterfield/snowboards-team-brock-butterfield.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-brock-butterfield/snowboards-team-brock-butterfield.component.html
@@ -1,3 +1,24 @@
-<p>
-  snowboards-team-brock-butterfield works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Brock_Butterfield.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+        <h1>Brock Butterfield</h1>
+        <div><span style="font-family: Helvetica;"><a href="https://youtu.be/Z5rQxHETumc">CLICK HERE TO SEE BROCK RIDE</a></span>
+        </div>
+        <div><strong><br /></strong>
+        </div>
+        <div><strong style="font-family: Helvetica;">MEET BROCK...&nbsp;</strong><span>Born and raised in the hills of Idaho. Been floating on snow since 1996. Chasing snow to big Alaska lines each spring and living full time in a 4x4 school     bus. Bus Life Adventure!</span>
+        </div>
+        <div>
+          <br />
+        </div>
+        <div><strong style="font-family: Helvetica;">BROCK'S FAVORITE NS BOARD IS...&nbsp;</strong><span>The Proto HDX - Best board for park, street and big mountain!</span>
+        </div>
+      </div>
+      <hr>
+  </div>
+</div>
