--- a/src/app/snowboards/snowboards-team/snowboards-team-chase-blackwell/snowboards-team-chase-blackwell.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-chase-blackwell/snowboards-team-chase-blackwell.component.html
@@ -1,3 +1,20 @@
-<p>
-  snowboards-team-chase-blackwell works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Chase_Blackwell.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+						<h1>Chase Blackwell</h1>
+						<div><strong style="font-family: Helvetica;">MEET CHASE...&nbsp;</strong><span>Local CO kid, born in Longmont. Been riding in Summit County since I was 8, I train with Jim Smith. Travel the world riding and competing! Proud to say     I ride NS boards strait out of Colorado made in America! @chase_ing_snow</span>
+						</div>
+						<div>
+							<br />
+						</div>
+						<div><strong style="font-family: Helvetica;">CHASE'S FAVORITE NS BOARD IS...&nbsp;</strong><span>The Funslinger because I ride the ripsaw for pipe and the Funslinger has the same profile but more playful and fun! </span>
+            </div>
+					</div>
+      <hr>
+  </div>
+</div>
