--- a/src/app/snowboards/snowboards-team/snowboards-team-chris-corning/snowboards-team-chris-corning.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-chris-corning/snowboards-team-chris-corning.component.html
@@ -1,3 +1,18 @@
-<p>
-  snowboards-team-chris-corning works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Chris_Corning.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+						<h1>Chris Corning</h1>
+						<div><strong style="font-family: Helvetica;">MEET CHRIS...&nbsp;</strong><span>I love to snowboard and I am a competition rider. My discipline is slope style. I have been in two Grand Prix's. My best finish was in the mammoth GP where     I ended up 11th.</span>
+						</div>
+						<div>&nbsp;</div>
+						<div><strong style="font-family: Helvetica;">CHRIS' FAVORITE NS BOARD IS...&nbsp;</strong><span>The Proto Type Two because the board is a really good all around slope board for me! Its stiff yet poppy.</span>
+						</div>
+					</div>
+      <hr>
+  </div>
+</div>
