--- a/src/app/snowboards/snowboards-team/snowboards-team-jacob-carey/snowboards-team-jacob-carey.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-jacob-carey/snowboards-team-jacob-carey.component.html
@@ -1,3 +1,23 @@
-<p>
-  snowboards-team-jacob-carey works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Jacob_Carey.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+						<h1>Jacob 'Cub' Carey</h1>
+						<div><span style="font-family: Helvetica;"><a href="https://youtu.be/XSmAjQfCqvA">CLICK HERE TO SEE CUB RIDE</a></span>
+						</div>
+						<div><strong><br /></strong>
+						</div>
+						<div><strong style="font-family: Helvetica;">MEET CUB...&nbsp;</strong><span>Born and raised in Conifer, Colorado. I enjoy riding powder,&nbsp;pillows, lines or pretty much anything with a good crew of friends.</span>
+						</div>
+						<div>
+							<br /> </div>
+						<div><strong style="font-family: Helvetica;">CUB'S FAVORITE NS BOARD IS...&nbsp;</strong><span>The&nbsp;159 West is my go to board for the Ripsaw&nbsp;profile and this board eats up whatever is in front of it! Also a must&nbsp;have in my quiver is a 157 Swift.</span>
+						</div>
+					</div>
+      <hr>
+  </div>
+</div>
