--- a/src/app/snowboards/snowboards-team/snowboards-team-jake-williams/snowboards-team-jake-williams.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-jake-williams/snowboards-team-jake-williams.component.html
@@ -1,3 +1,17 @@
-<p>
-  snowboards-team-jake-williams works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Jake_Williams.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+						<h1>Jake Williams</h1>
+						<p><a href="https://youtu.be/QNhngVmajzE">CLICK HERE TO SEE JAKE RIDE</a>
+						</p>
+						<p><strong style="font-family: Helvetica;">JAKE'S FAVORITE NS BOARD IS...&nbsp;</strong><span>Revolver. I love the mid wide under my feet with the true twin and a super buttery feel that will slash threw err thang. It's awesome!!</span>
+						</p>
+					</div>
+      <hr>
+  </div>
+</div>
