--- a/src/app/snowboards/snowboards-team/snowboards-team-jason-elms/snowboards-team-jason-elms.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-jason-elms/snowboards-team-jason-elms.component.html
@@ -1,3 +1,23 @@
-<p>
-  snowboards-team-jason-elms works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Jason_Elms.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+        <h1>Jason Elms</h1>
+        <div><span style="font-family: Helvetica;"><a href="https://youtu.be/JDo-wN2NeVE">CLICK HERE TO SEE JASON RIDE</a></span>
+        </div>
+        <div><strong><br /></strong>
+        </div>
+        <div><strong style="font-family: Helvetica;">MEET JASON...&nbsp;</strong><span>After 25 years of riding and still progressing I'm so stoked to spend my whole career on NeverSummer. I wouldn't want it any other way. A sole progression.     Thanks NS!!</span>
+        </div>
+        <div><span style="font-family: Helvetica;"><br /></span>
+        </div>
+        <div><strong><span style="font-family: Helvetica;">JASON'S FAVORITE NS BOARD IS...</span>&nbsp;</strong><span>The&nbsp;Snowtrooper. Trusted fun! All round versatile!&nbsp;</span>
+        </div>
+      </div>
+      <hr>
+  </div>
+</div>
