--- a/src/app/snowboards/snowboards-team/snowboards-team-mike-hood/snowboards-team-mike-hood.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-mike-hood/snowboards-team-mike-hood.component.html
@@ -1,3 +1,19 @@
-<p>
-  snowboards-team-mike-hood works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Mike_Hood2.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+						<h1>Mike Hood</h1>
+						<p><span style="font-family: Helvetica;"><a href="https://youtu.be/bV-ALjqLlns">CLICK HERE TO SEE MIKE RIDE</a></span>
+						</p>
+						<p><strong style="font-family: Helvetica;">MEET MIKE...&nbsp;</strong><span>Enjoy my winters in the back country or riding pow with friends at the beav. When i am not snowboarding, i am enjoying the mountain lifestyle, mountain     biking, rock climbing, hunting, and rafting.&nbsp;</span>
+						</p>
+						<p><strong style="font-family: Helvetica;">MIKE'S FAVORITE NS BOARD IS...&nbsp;</strong><span>The Swift, because the board was ready.&nbsp;</span>
+						</p>
+					</div>
+      <hr>
+  </div>
+</div>
