--- a/src/app/snowboards/snowboards-team/snowboards-team-nick-decicco/snowboards-team-nick-decicco.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-nick-decicco/snowboards-team-nick-decicco.component.html
@@ -1,3 +1,16 @@
-<p>
-  snowboards-team-nick-decicco works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Nick_Decicco.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+						<h1>Nick DeCicco</h1>
+						<p><a href="https://youtu.be/j7gdNTUsBG4" style="font-family: Helvetica;">CLICK HERE TO SEE NICK RIDE</a> </p>
+						<p><strong style="font-family: Helvetica;">MEET NICK...&nbsp;</strong><span>I'm a life long snowboard bum that likes to ride my board in epic places.</span>&nbsp;</p>
+						<p><strong style="font-family: Helvetica;">NICK'S FAVORITE NS BOARD&nbsp;IS...&nbsp;</strong><span>The Ripsaw,&nbsp; it rides everything and has a ton of pop.</span> </p>
+					</div>
+      <hr>
+  </div>
+</div>
