--- a/src/app/snowboards/snowboards-team/snowboards-team-nick-larson/snowboards-team-nick-larson.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-nick-larson/snowboards-team-nick-larson.component.html
@@ -1,3 +1,20 @@
-<p>
-  snowboards-team-nick-larson works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Nick_Larson.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+						<h1>Nick Larson</h1>
+						<p><a href="https://youtu.be/S7MRJoWgbEo">CLICK HERE TO SEE NICK RIDE</a>
+							<br />
+						</p>
+						<p><strong><span style="font-family: Helvetica;"><span style="font-family: Helvetica;">MEET NICK...&nbsp;</span></span></strong>Do it because it makes you smile, everyday I get to strap in its a blessing. (Also sponsored by:&nbsp;Smith Optics, Celtek,
+							Stance, SunBum, Skullcandy).</p>
+						<p><strong><span style="font-family: Helvetica;"><span style="font-family: Helvetica;">NICK'S&nbsp;FAVORITE NS BOARD IS...&nbsp;</span></span></strong>
+							<span style="font-family: Helvetica;"><span>The&nbsp;Ripsaw, it's the stiffer of the true twins, so for my style of riding it stays stable at high speed along with having the playful side that everyone loves.&nbsp;</span></span>&nbsp;</p>
+					</div>
+      <hr>
+  </div>
+</div>
