--- a/src/app/snowboards/snowboards-team/snowboards-team-rajat-bhyani/snowboards-team-rajat-bhyani.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-rajat-bhyani/snowboards-team-rajat-bhyani.component.html
@@ -1,3 +1,19 @@
-<p>
-  snowboards-team-rajat-bhyani works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Rajat_B.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+						<h1>Rajat Bhyani</h1>
+						<p><span style="font-family: Helvetica;"><a href="https://youtu.be/KqOtD1zPMTU">CLICK HERE TO SEE RAJAT RIDE</a></span>
+						</p>
+						<p><strong style="font-family: Helvetica;">MEET RAJAT...&nbsp;</strong><span>I grew up in Colorado Springs, but have been living in Jackson, Wyoming for the last 21 years. I’ve been with NS since the beginnings. I knew I had found     the answer ever since I saw that small stack of decks in the corner of the Summit Snowboards Factory. I’ve ridden and represented these boards ever     since, all over the world, and hope to do so as long as I can.&nbsp;</span>
+						</p>
+						<p><strong style="font-family: Helvetica;">RAJAT'S FAVORITE NS BOARD IS...&nbsp;</strong><span>The 158 West. Snappy, rails like crazy, floats in the pow, everything I’m looking for.</span>
+						</p>
+					</div>
+      <hr>
+  </div>
+</div>
