--- a/src/app/snowboards/snowboards-team/snowboards-team-sean-fithian/snowboards-team-sean-fithian.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-sean-fithian/snowboards-team-sean-fithian.component.html
@@ -1,3 +1,24 @@
-<p>
-  snowboards-team-sean-fithian works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Sean_Fithian.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+						<h1>Sean Fithian</h1>
+						<div><a href="https://youtu.be/Ltm57qJZXgQ">CLICK HERE TO SEE SEAN RIDE</a>
+						</div>
+						<div><strong><br /></strong>
+						</div>
+						<div><strong style="font-family: Helvetica;">MEET SEAN...&nbsp;</strong><span>Powder slashing in new places during the winter. Fishing and skateboarding in new places during the summer. WA &amp; MT are where I call home.</span>
+						</div>
+						<div>
+							<br />
+						</div>
+						<div><strong style="font-family: Helvetica;">SEAN'S FAVORITE NS BOARD IS...&nbsp;</strong><span>The&nbsp;Swift 157 is the best board for the pow slashes.</span>
+						</div>
+					</div>
+      <hr>
+  </div>
+</div>
