--- a/src/app/snowboards/snowboards-team/snowboards-team-chris-lynch/snowboards-team-chris-lynch.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-chris-lynch/snowboards-team-chris-lynch.component.html
@@ -1,3 +1,20 @@
-<p>
-  snowboards-team-chris-lynch works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Chris_Lynch.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+						<h1>Chris Lynch</h1>
+						<p><span style="font-family: Helvetica;"><a href="https://youtu.be/l7Twocrodt8">CLICK HERE TO SEE CHRIS RIDE</a></span>
+						</p>
+						<p><strong style="font-family: Helvetica;">MEET CHRIS...&nbsp;</strong><span>Product of the 80's</span>
+							<br />
+						</p>
+						<p><strong style="font-family: Helvetica;">CHRIS' FAVORITE NS BOARD IS...<span>&nbsp;</span></strong><span>The&nbsp;Revolver 155 is my weapon of choice, it's the Cadillac of boards!&nbsp;</span>
+						</p>
+					</div>
+      <hr>
+  </div>
+</div>
