--- a/src/app/snowboards/snowboards-team/snowboards-team-devin-whiteley/snowboards-team-devin-whiteley.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-devin-whiteley/snowboards-team-devin-whiteley.component.html
@@ -1,3 +1,17 @@
-<p>
-  snowboards-team-devin-whiteley works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Devin_Whiteley.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+        <h1>Devin Whiteley</h1>
+        <p><b>Meet Devin...</b> I was fortunate enough to grow up right out side of Salt Lake City, UT, which is one of snowboarding's mecca's of urban riding. I love to be in the mountains, hiking and fishing when I'm not on a board. Street snowboarding is
+          what I enjoy most, I love the creativity that comes with finding something that you wouldn't necessarily think to snowboard on and transforming it into something that can be utilized or interpreted in many different ways. That to me is the ultimate
+          freedom.</p>
+        <p><b>Devin's Favorite NS Board is...</b> Proto HD - because of its versatility. It's sick in the streets, fun in the park and superb in the pow. It's my go/to board no matter what kind of day it is.&nbsp;</p>
+      </div>
+      <hr>
+  </div>
+</div>
