--- a/src/app/snowboards/snowboards-team/snowboards-team-jason-hindman/snowboards-team-jason-hindman.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-jason-hindman/snowboards-team-jason-hindman.component.html
@@ -1,3 +1,24 @@
-<p>
-  snowboards-team-jason-hindman works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Jason_Hindman.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+        <h1>Jason Hindman</h1>
+        <div><a href="https://youtu.be/JBFaUs0j2iw">CLICK HERE TO SEE JASON RIDE</a>
+        </div>
+        <div><strong><br /></strong>
+        </div>
+        <div><strong style="font-family: Helvetica;">MEET JASON...&nbsp;</strong><span>25 years on the shred and counting. I'm all about that work/life balance. Good times, styled tricks, handling business, family, and health are my motivation     in life. I also like to party and occasionally grow a mustache. Peep my Insta @JasonHindman</span>
+        </div>
+        <div>
+          <br />
+        </div>
+        <div><strong style="font-family: Helvetica;">JASON'S FAVORITE NS BOARD IS...<span>&nbsp;</span></strong><span>I would have to say the Proto because it is the most versatile board for me.</span>
+        </div>
+      </div>
+      <hr>
+  </div>
+</div>
