--- a/src/app/snowboards/snowboards-team/snowboards-team-rick-rodriguez/snowboards-team-rick-rodriguez.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-rick-rodriguez/snowboards-team-rick-rodriguez.component.html
@@ -1,3 +1,24 @@
-<p>
-  snowboards-team-rick-rodriguez works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Rick_Rodriguez.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+						<h1>Rick Rodriguez RICKMODE</h1>
+						<div><span style="font-family: Helvetica;"><a href="https://youtu.be/zrRHSv1z5hU">CLICK HERE TO SEE RICK RIDE</a></span>
+						</div>
+						<div><strong><br /></strong>
+						</div>
+						<div><strong style="font-family: Helvetica;">MEET RICK...&nbsp;</strong><span>Life is all about family friends and fun and I shred beaver creek on the daily.</span>
+						</div>
+						<div>
+							<br />
+						</div>
+						<div><strong style="font-family: Helvetica;">RICK'S FAVORITE NS BOARD IS...&nbsp;</strong><span>My number 1 pick for a shred stick is the new Funslinger it's versatility is what sets it apart from the others. From its asym heel edge to its awesome     shape this board rips. And of course this hippie digs the tie&nbsp;dye.</span>
+						</div>
+					</div>
+      <hr>
+  </div>
+</div>
