--- a/src/app/snowboards/snowboards-team/snowboards-team-tom-flocco/snowboards-team-tom-flocco.component.html
+++ b/src/app/snowboards/snowboards-team/snowboards-team-tom-flocco/snowboards-team-tom-flocco.component.html
@@ -1,3 +1,24 @@
-<p>
-  snowboards-team-tom-flocco works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <div class="one_third">
+        <img src="../../../../assets/img/snowboards/team/team-view/Tom_Flocco.jpg" border="0" alt="" />
+      </div>
+
+     <div class="two_third last">
+						<h1>Tom Flocco</h1>
+						<div><span style="font-family: Helvetica;"><a href="https://youtu.be/B3ZpEsRNqm0">CLICK HERE TO SEE TOM RIDE</a></span>
+						</div>
+						<div><strong><br /></strong>
+						</div>
+						<div><strong style="font-family: Helvetica;">MEET TOM...&nbsp;</strong><span>I love to snowboard and I can't seem to ever stop. So I may as well push it as hard as my old beat up meat popsicle can handle. NS boards kick so much     ass! Big thanks to Cooper Hoffmeister for getting me started with this company. Also thanks to Jason Hindman for getting on the mountain with me all     winter every winter.</span>
+						</div>
+						<div>
+							<br />
+						</div>
+						<div><strong style="font-family: Helvetica;">TOM'S FAVORITE NS BOARD IS...&nbsp;</strong><span>I'm digging the Snowtrooper right now. It's stiff enough for handling big jumps but forgiving enough for 'dem deep Utah pow days!</span>
+						</div>
+					</div>
+      <hr>
+  </div>
+</div>
