--- a/src/app/store/apparel-shirts/apparel-shirts.component.scss
+++ b/src/app/store/apparel-shirts/apparel-shirts.component.scss
@@ -14,11 +14,6 @@
 	height: 350px;
 }
 
-#main {
-	margin-top: 50px;
-}
-
-
 // Navigation Links
 #categories {
 	margin: 0;
@@ -55,3 +50,232 @@
 	color:#000;
 	font-weight:700;
 }
+
+
+/*------------------------------------------
+			* Store Items
+-------------------------------------------*/
+.store-wrap {
+	width: 100%;
+	height: 100%;
+	margin: 0 auto;
+}
+.store-portfolio {
+	width: 30%;
+	display: inline-block;
+	margin: 50px 10px;
+}
+
+.store-item {
+	width: 273px;
+	height: 190px;	
+}
+
+.store-photo {
+	width: 100%;
+}
+
+
+
+.store-portfolio:hover .store-item {
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-o-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	transform: scale(1.1);
+	-webkit-transition: all 5s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+	-moz-transition: all 5s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+	-o-transition: all 5s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+	-ms-transition: all 5s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+	transition: all 5s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+}
+
+.store-portfolio:hover .item-overlay {
+	background:rgba(0,0,0,0.8);
+	opacity:1;
+}
+
+.store-portfolio:hover  {
+	background:rgba(255,255,255,0.9);
+}
+
+.item-overlay {
+	width: 273px;
+	height: 260px;	
+	background:rgba(0,0,0,0);
+	position:absolute;
+	opacity:0;
+	box-sizing:border-box;
+	-webkit-transition: all 0.6s ease-in-out;
+	-moz-transition: all 0.6s ease-in-out;
+	-o-transition: all 0.6s ease-in-out;
+	-ms-transition: all 0.6s ease-in-out;
+	transition: all 0.6s ease-in-out;
+	margin-top: -265px;		
+}
+
+.item-title {
+	display:block;
+	position:relative;
+	font-weight: 600;
+	font-family: 'Titillium Web', sans-serif;
+	color:#fff;
+	font-size:18px;
+	line-height:18px;
+	text-transform:uppercase;
+	margin-left:-100%;
+	margin-top:30px;
+	margin-right:28px;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+	-ms-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
+}
+
+.item-title {
+	margin:30px 20px 0px 20px;
+	-ms-transform: translateY(20px);
+	-webkit-transform: translateY(20px);
+	-o-transition:translateY(20px);
+	transform: translateY(20px);
+	opacity:0;
+	font-size:18px;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+
+.store-portfolio:hover .item-title {
+	// margin-left:28px;
+	-webkit-transition: all 0.6s ease-in-out 0.3s;
+	-moz-transition: all 0.6s ease-in-out 0.3s;
+	-o-transition: all 0.6s ease-in-out 0.3s;
+	-ms-transition: all 0.6s ease-in-out 0.3s;
+	transition: all 0.6s ease-in-out 0.3s;
+}
+
+.store-portfolio:hover .item-title {
+	// margin:5px 20px 0px 20px;
+	opacity:1;
+	-ms-transform: translateY(0px);
+	-webkit-transform: translateY(0px);
+	-o-transition:translateY(0px);
+	transform: translateY(0px);
+	-webkit-transition: all 0.5s ease-in-out 0.5s;
+	-moz-transition: all 0.5s ease-in-out 0.5s;
+	-o-transition: all 0.5s ease-in-out 0.5s;
+	-ms-transition: all 0.5s ease-in-out 0.5s;
+	transition: all 0.5s ease-in-out 0.5s;
+}
+
+.store-portfolio:hover {
+	opacity:1;
+	// bottom: -15px;
+	-webkit-transition: all 0.2s ease-in-out 0.9s;
+	-moz-transition: all 0.2s ease-in-out 0.9s;
+	-o-transition: all 0.2s ease-in-out 0.9s;
+	-ms-transition: all 0.2s ease-in-out 0.9s;
+	transition: all 0.2s ease-in-out 0.9s;
+}
+
+
+/*--------------------------------------------------
+	08. Portfolio Items
+---------------------------------------------------*/
+	
+
+
+// .item-content {
+// 	height:100%;
+// 	width:100%;
+// 	position:absolute;
+// 	background-color:#fff;
+// 	-webkit-box-sizing: border-box;
+// 	-moz-box-sizing: border-box;
+// 	box-sizing: border-box;
+// 	text-align:center;
+// 	padding:0px;
+// 	background-size:cover;
+// 	background-position:center center;
+// 	overflow:hidden;
+// 	display: table;
+// 	-webkit-transform: scale(1.01);
+// 	-moz-transform: scale(1.01);
+// 	-o-transform: scale(1.01);
+// 	-ms-transform: scale(1.01);
+// 	transform: scale(1.01);
+// 	-webkit-transition: all 2s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+// 	-moz-transition: all 2s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+// 	-o-transition: all 2s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+// 	-ms-transition: all 2s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+// 	transition: all 2s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+// }
+
+
+
+
+// .padding-overlay .item-overlay {
+// 	display:table-cell;
+// 	position:relative;
+// 	overflow:hidden;
+// 	text-align:center;
+// 	vertical-align:middle;
+// }
+
+// .item:hover .item-overlay {
+// 	background:rgba(0,0,0,0.8);
+// 	opacity:1;
+// }
+
+// .item:hover  {
+// 	background:rgba(255,255,255,0.9);
+// }
+
+// .item {
+// 	background: rgb(111,226,158); /* Old browsers */
+// 	background: -moz-linear-gradient(-45deg,  rgba(111,226,158,0.8) 0%, rgba(91,218,209,0.8) 100%); /* FF3.6+ */
+// 	background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(111,226,158,0.8)), color-stop(100%,rgba(91,218,209,0.8))); /* Chrome,Safari4+ */
+// 	background: -webkit-linear-gradient(-45deg,  rgba(111,226,158,0.8) 0%,rgba(91,218,209,0.8) 100%); /* Chrome10+,Safari5.1+ */
+// 	background: -o-linear-gradient(-45deg,  rgba(111,226,158,0.8) 0%,rgba(91,218,209,0.8) 100%); /* Opera 11.10+ */
+// 	background: -ms-linear-gradient(-45deg,  rgba(111,226,158,0.8) 0%,rgba(91,218,209,0.8) 100%); /* IE10+ */
+// 	background: linear-gradient(135deg,  rgba(111,226,158,0.8) 0%,rgba(91,218,209,0.8) 100%); /* W3C */
+// 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6fe29e', endColorstr='#5bdad1',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+// 	opacity:0;
+// 	-webkit-transition: all 0.6s ease-in-out;
+// 	-moz-transition: all 0.6s ease-in-out;
+// 	-o-transition: all 0.6s ease-in-out;
+// 	-ms-transition: all 0.6s ease-in-out;
+// 	transition: all 0.6s ease-in-out;
+// }
+
+
+// .item:hover {
+// 	margin-left:30px;
+// 	-webkit-transition: all 0.6s ease-in-out;
+// 	-moz-transition: all 0.6s ease-in-out;
+// 	-o-transition: all 0.6s ease-in-out;
+// 	-ms-transition: all 0.6s ease-in-out;
+// 	transition: all 0.6s ease-in-out;
+// }
+
+// .item:hover {
+// 	margin:0 20px 5px 20px;
+// 	opacity:1;
+// 	-ms-transform: translateY(0px);
+// 	-webkit-transform: translateY(0px);
+// 	-o-transition:translateY(0px);
+// 	transform: translateY(0px);
+// 	-webkit-transition: all 0.5s ease-in-out 0.5s;
+// 	-moz-transition: all 0.5s ease-in-out 0.5s;
+// 	-o-transition: all 0.5s ease-in-out 0.5s;
+// 	-ms-transition: all 0.5s ease-in-out 0.5s;
+// 	transition: all 0.5s ease-in-out 0.5s;
+// }
+
+
+
+
+
