Removed all apparel components, added working link to neversummer store for all apparel

--- a/src/app/store/apparel-accessories/apparel-accessories.component.html
+++ b/src/app/store/apparel-accessories/apparel-accessories.component.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<div class="store-wrap" style="width: 1000px;">
 				<div *ngFor="let accessory of accessories" class="store-portfolio"> 		
-					<a href="#">
+					<a href="http://neversummer-snow.shptron.com/c/accessories">
 						<div class="store-item"> 							
 							<img class="store-photo" src="{{accessory.photo}}" alt="">
 							<div class="item-overlay">
