--- a/src/app/store/apparel-kids/apparel-kids.component.html
+++ b/src/app/store/apparel-kids/apparel-kids.component.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<div class="store-wrap" style="width: 1000px;">
 				<div *ngFor="let kid of kids" class="store-portfolio"> 
-					<a href="#">
+					<a href="http://neversummer-snow.shptron.com/c/apparel_boys">
 						<div class="store-item"> 					
 							<img class="store-photo" src="{{kid.photo}}" alt="">
 							<div class="item-overlay">
