--- a/src/app/store/apparel-mens/apparel-mens.component.html
+++ b/src/app/store/apparel-mens/apparel-mens.component.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<div class="store-wrap" style="width: 1000px;">
 				<div *ngFor="let men of mens" class="store-portfolio"> 
-					<a href="#">
+					<a href="http://neversummer-snow.shptron.com/c/apparel">
 						<div class="store-item"> 					
 							<img class="store-photo" src="{{men.photo}}" alt="">
 							<div class="item-overlay">
